# Color_solving_game

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
objects/: boxes.cpp  boxes.h  chemsynth.cpp  chemsynth.h  sound.cpp  sound.h  textures.cpp  textures.h
stb_image/: stb_image.cpp
